IMTEPD-362: removed code that is no longer relevant, fixed bug where passed numdocs was not actually used